--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,7 @@ google-cloud-bigquery==1.20.0
 google-cloud-storage==1.23.0
 google-auth==1.14.0
 clickhouse-driver==0.1.0
+convertdate==2.2.1
+LunarCalendar==0.0.9
+holidays==0.10.2
+pystan==2.19.1.1
